unpackaged/main/default/objects/OrderApi__Item_Subscription_Plan__c/OrderApi__Item_Subscription_Plan__c.object-meta.xml
<CustomObject>
    <description>Links a &quot;Subscription&quot; Item to a Subscription Plan to enable the linked Item to be sold in conjunction with the linked Subscription Plan.</description>
    <label>Item Subscription Plan</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Item Subscription Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Subscription Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>