unpackaged/main/default/objects/OrderApi__Item_Subscription_Plan__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the default Subscription Plan for related Item.</description>
    <inlineHelpText>Defines the default Subscription Plan for related Item.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>