unpackaged/main/default/objects/OrderApi__Item_Subscription_Plan__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <description>** Required ** Link to the Item enabled for the related Subscription Plan.</description>
    <inlineHelpText>** Required ** Link to the Item enabled for the related Subscription Plan.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Subscription Plans</relationshipLabel>
    <relationshipName>Subscription_Plan_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>