unpackaged/main/default/objects/OrderApi__Item_Subscription_Plan__c/fields/OrderApi__Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan__c</fullName>
    <description>** Required ** Link to the Subscription Plan that the related Subscription Item is being enabled for.</description>
    <inlineHelpText>** Required ** Link to the Subscription Plan that the related Subscription Item is being enabled for.</inlineHelpText>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Subscription_Plan_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>